clusters/cluster-2/podinfo/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: podinfo
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`podinfo.srv-k3s.server.io`)
    services:
    - kind: Service
      name: podinfo
      port: 9898
  tls:
    secretName: podinfo-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: podinfo-redirect
  namespace: default
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`podinfo.srv-k3s.server.io`)
    middlewares:
    - name: redirect-to-https
    services:
    - kind: Service
      name: podinfo
      port: 9898
